# nhl

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: nightly.yml
scripts/: copy_db.py
src/nhl_ingest/: api.py  cli.py  db.py  ingest.py  parse.py
web/: package-lock.json  package.json  vercel.json
web/scripts/: auth-schema.mjs
web/src/: auth.ts
web/src/app/: favorites-actions.ts  globals.css  layout.tsx  page.tsx  sitemap.ts
web/src/app/api/cron/milestones/: route.ts
web/src/app/api/favorites/: route.ts
web/src/app/best-bets/: page.tsx
web/src/app/player/[id]/: page.tsx
web/src/app/player/[id]/vs/[team]/: page.tsx
web/src/app/pricing/: page.tsx
web/src/app/schedule/: page.tsx
web/src/app/search/: page.tsx
web/src/app/signin/: page.tsx
web/src/app/team/[abbrev]/: page.tsx
web/src/app/team/[abbrev]/vs/[opp]/: page.tsx
web/src/components/: charts.tsx  favorite-button.tsx  filters.tsx  header-auth.tsx  locked-outlook.tsx  season-select.tsx  stat-tile.tsx  team-logo.tsx  upcoming-games.tsx  your-favorites.tsx
web/src/lib/: db.ts  email.ts  metrics.ts  nhl.ts  tier.ts
web/src/types/: next-auth.d.ts
