[project]
name = "nhl-data"
version = "0.1.0"
description = "NHL data ingestion: game logs, boxscores, player/goalie splits"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[project.scripts]
nhl = "nhl_ingest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nhl_ingest"]
